@@ -96,6 +96,7 @@ Bug fixes:
 - PR#6651: Failing component lookup
 * PR#6664: Crash when finalising lazy values of the wrong type.
   (Damien Doligez)
+- PR#6672: Unused variance specification allowed in with constraint
 - PR#6744: Univars can escape through polymorphic variants (partial fix)
 - PR#6776: Failure to kill the "tick" thread, segfault when exiting the runtime
 - PR#6752: Extensible variant types and scope escaping
